--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,19 @@
+backports.functools-lru-cache==1.5
+beautifulsoup4==4.7.1
 cachetools==3.1.1
 certifi==2019.3.9
 chardet==3.0.4
 Click==7.0
 enum34==1.1.6
-Flask==1.0.3
+Flask==1.1.1
 Flask-Cors==3.0.8
 futures==3.2.0
+google==2.0.2
 google-api-core==1.11.1
+google-api-python-client==1.7.9
 google-auth==1.6.3
+google-auth-httplib2==0.0.3
+google-auth-oauthlib==0.4.0
 google-cloud-core==1.0.1
 google-cloud-datastore==1.8.0
 google-cloud-storage==1.16.1
@@ -21,17 +27,20 @@ Jinja2==2.10.1
 MarkupSafe==1.1.1
 ndb==1.0.13b1
 oauth2client==1.5.0
+oauthlib==3.0.2
 proto-google-datastore-v1beta3==0.0.3rc0
 protobuf==3.8.0
 pyasn1==0.4.5
 pyasn1-modules==0.2.5
 pytz==2019.1
 requests==2.22.0
+requests-oauthlib==1.2.0
 rsa==4.0
 simplejson==3.16.0
 six==1.12.0
+soupsieve==1.9.2
 testing-v1beta3-googledatastore==4.0.0b4
-uritemplate==0.6
+uritemplate==3.0.0
 urllib3==1.25.3
 webapp2==2.5.2
 Werkzeug==0.15.4
