--- a/app.yaml
+++ b/app.yaml
@@ -2,10 +2,31 @@ runtime: python27
 api_version: 1
 threadsafe: true
 
-handlers:
-- url: /.*
-  script: main.app
-
 libraries:
 - name: ssl
   version: latest
+
+handlers:
+- url: /(.*\.js)
+  mime_type: text/javascript
+  static_files: dist/\1
+  upload: dist/(.*\.js)
+
+
+- url: /api/.*
+  script: main.app
+
+
+- url: /.*
+  mime_type: text/html
+  static_files: dist/index.html
+  upload: dist/index.html
+
+
+
+
+
+
+
+
+
