created: new dependency for project

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,47 +1,31 @@
 backports.functools-lru-cache==1.5
-beautifulsoup4==4.7.1
+beautifulsoup4==4.8.0
 cachetools==3.1.1
-certifi==2019.3.9
+certifi==2019.6.16
 chardet==3.0.4
 Click==7.0
 enum34==1.1.6
 Flask==1.1.1
 Flask-Cors==3.0.8
-futures==3.2.0
+futures==3.3.0
 google==2.0.2
-google-api-core==1.11.1
-google-api-python-client==1.7.9
+google-api-core==1.14.2
 google-auth==1.6.3
-google-auth-httplib2==0.0.3
-google-auth-oauthlib==0.4.0
-google-cloud-core==1.0.1
-google-cloud-datastore==1.8.0
-google-cloud-storage==1.16.1
-google-resumable-media==0.3.2
+google-cloud==0.34.0
+google-cloud-vision==0.38.1
 googleapis-common-protos==1.6.0
-grpcio==1.21.1
-httplib2==0.13.0
+grpcio==1.22.0
 idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10.1
 MarkupSafe==1.1.1
-ndb==1.0.13b1
-oauth2client==1.5.0
-oauthlib==3.0.2
-proto-google-datastore-v1beta3==0.0.3rc0
-protobuf==3.8.0
-pyasn1==0.4.5
-pyasn1-modules==0.2.5
-pytz==2019.1
+protobuf==3.9.1
+pyasn1==0.4.6
+pyasn1-modules==0.2.6
+pytz==2019.2
 requests==2.22.0
-requests-oauthlib==1.2.0
 rsa==4.0
-simplejson==3.16.0
 six==1.12.0
 soupsieve==1.9.2
-testing-v1beta3-googledatastore==4.0.0b4
-uritemplate==3.0.0
-urlfetch==1.1.2
 urllib3==1.25.3
-webapp2==2.5.2
-Werkzeug==0.15.4
+Werkzeug==0.15.5
