--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,15 +12,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-    - name: Run a one-line script
+    - name: Check for script working
       run: echo Hello, world!
-    - name: Run a multi-line script
+    - name: running start up script
       run: |
-        echo Add other actions to build,
-        echo test, and deploy your project.
-    - name: Trying to have gcloud sdk
-      run: |
-        curl https://sdk.cloud.google.com | bash
-        exec -l $SHELL
-        gcloud init --disable-prompts
+      sh startup.sh
+        
         
