--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,17 @@ jobs:
     - uses: actions/checkout@v1
     - name: Check for script working
       run: echo Hello, world!
-    - name: running start up script
-      run: sh startup.sh
+    - name: Installing google sdk
+      run: curl https://sdk.cloud.google.com | bash
+    - name: Fixing path of google sdk in evironment variable
+      run: |
+        export gcloud_path=/home/runner/google-cloud-sdk/
+        echo $gcloud_path
+    - name: Installing python and pip
+      run: |
+        apt-get update -y
+        apt-get -y install python2.7 python-pip
+    - name: checking out directory
+      run: ls
+      
         
