--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,9 @@ jobs:
       run: |
         sudo apt-get update -y
         sudo apt-get -y install python2.7 python-pip
-    - name: checking out directory
-      run: ls
+    - name: Installing dependcy for project
+      run: pip install -r requirements.txt
+    - name: Running test suite
+      run: python runner.py
       
         
