--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Installing dependcy for project
       run: pip install -r requirements.txt
     - name: Installing dependcy in library to
-      run: pip install -t lib/ requirements.txt
+      run: pip install -t lib/ -r requirements.txt
     - name: Running test suite
       run: python runner.py
       
