--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,9 @@ jobs:
     - name: Installing dependcy for project
       run: pip install -r requirements.txt
     - name: Adding upgrade
-      run: sudo -H pip install setuptools --upgrade
+      run: |
+        pip install --upgrade pip
+        pip install --upgrade setuptools
     - name: Installing dependcy in library to
       run: pip install -t lib/ -r requirements.txt
     - name: Running test suite
