--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,8 +28,8 @@ jobs:
       run: pip install -r requirements.txt
     - name: Adding upgrade
       run: |
-        pip install --upgrade pip
-        pip install --upgrade setuptools
+        sudo pip install --upgrade pip
+        sudo pip install --upgrade setuptools
     - name: Installing dependcy in library to
       run: pip install -t lib/ -r requirements.txt
     - name: Running test suite
