--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,14 @@ jobs:
         sudo apt-get -y install python2.7 python-pip
     - name: Installing dependcy for project
       run: pip install -r requirements.txt
+    - name: Adding upgrade
+      run: |
+        sudo pip install --upgrade pip
+        sudo pip install --upgrade setuptools
+    - name: Installing dependcy in library to
+      run: pip install -t lib/ -r requirements.txt
+    - name: check dir
+      run: ls
     - name: Running test suite
       run: python runner.py
       
