--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,8 @@ jobs:
       run: echo Hello, world!
     - name: Download google sdk
       run: curl https://sdk.cloud.google.com | bash
+    - name: Restart terminal
+      run: source ~/.bashrc
     - name: View gooogle sdk
       run: ls /home/runner/google-cloud-sdk/
     - name: Fixing path of google sdk in evironment variable
