--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,10 +15,14 @@ jobs:
     - name: Check for script working
       run: echo Hello, world!
     - name: Installing google sdk
-      run: curl https://sdk.cloud.google.com | bash
+      run: |
+        echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] https://packages.cloud.google.com/apt cloud-sdk main" | tee -a /etc/apt/sources.list.d/google-cloud-sdk.list
+        sudo apt-get install apt-transport-https ca-certificates -y
+        curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | apt-key --keyring /usr/share/keyrings/cloud.google.gpg add -
+        sudo apt-get update && sudo apt-get install -y google-cloud-sdk google-cloud-sdk-app-engine-python google-cloud-sdk-app-engine-python-extras
     - name: Fixing path of google sdk in evironment variable
       run: |
-        export gcloud_path=/home/runner/google-cloud-sdk/
+        export gcloud_path=/usr/lib/google-cloud-sdk/
         echo $gcloud_path
     - name: Installing python and pip
       run: |
