check for project id

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,9 @@ jobs:
     - name: Check for script working
       run: echo Hello, world!
     - name: Check for secrets
-      run: echo ${{secrets.GCLOUD_PROJECT_ID}}
+      env:
+          PROJECT_ID: ${{secrets.GCLOUD_PROJECT_ID}}
+      run: echo $PROJECT_ID
 #     - name: Installing google sdk
 #       run: |
 #         echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] https://packages.cloud.google.com/apt cloud-sdk main" | sudo tee -a /etc/apt/sources.list.d/google-cloud-sdk.list
