--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,18 +12,18 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-#     - name: Check for script working
-#       run: echo Hello, world!
+    - name: Check for script working
+      run: echo Hello, world!
 #     - name: Check for secrets
 #       env:
 #           PROJECT_ID: ${{secrets.GCLOUD_PROJECT_ID}}
 #       run: echo $PROJECT_ID
-    - uses: actions-hub/gcloud@master
-      env:
-        PROJECT_ID: ${{secrets.GCLOUD_PROJECT_ID}}
-        APPLICATION_CREDENTIALS: ${{secrets.GOOGLE_APPLICATION_CREDENTIALS}}
-      with:
-        args: app deploy app.yaml
+#     - uses: actions-hub/gcloud@master
+#       env:
+#         PROJECT_ID: ${{secrets.GCLOUD_PROJECT_ID}}
+#         APPLICATION_CREDENTIALS: ${{secrets.GOOGLE_APPLICATION_CREDENTIALS}}
+#       with:
+#         args: app deploy app.yaml
 #     - name: check for sdk in google
 #       run: ls /usr/lib/google-cloud-sdk/
 #     - name: Installing google sdk
