--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Check for script working
-      run: echo Hello, world..!
+      run: echo Hello, world.!
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
