--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,11 +49,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v1
+      - name: store env variable
+        run: . deploy.sh
       - uses: actions-hub/gcloud@master
         env:
           PROJECT_ID: ${{secrets.GCLOUD_PROJECT_ID}}
           APPLICATION_CREDENTIALS: ${{secrets.GOOGLE_APPLICATION_CREDENTIALS}}
-        name: store env variable
-        run: . deploy.sh
+        
         with:
           args: app deploy app.yaml --version $version 
