--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,9 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - name: store env variable
-        run: . deploy.sh
+        run: |
+          . deploy.sh
+          echo $version
       - uses: actions-hub/gcloud@master
         env:
           PROJECT_ID: ${{secrets.GCLOUD_PROJECT_ID}}
