--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,10 +14,13 @@ jobs:
     - uses: actions/checkout@v1
     - name: Check for script working
       run: echo Hello, world!
-    - name: check for github secrets
-      run: | 
-        ehco ${{secrets.GOOGLE_APPLICATION_CREDENTIALS}} | base64 -d > dec.json
-        cat dec.json
+    - name: check for enve
+      env:
+          PROJECT_ID: ${{secrets.GCLOUD_PROJECT_ID}}
+          APPLICATION_CREDENTIALS: ${{secrets.GOOGLE_APPLICATION_CREDENTIALS}}
+      run: |
+        echo "$APPLICATION_CREDENTIALS" | base64 -d > client.json
+        ls
 #     - name: Installing google sdk
 #       run: |
 #         echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] https://packages.cloud.google.com/apt cloud-sdk main" | sudo tee -a /etc/apt/sources.list.d/google-cloud-sdk.list
@@ -44,6 +47,10 @@ jobs:
 #       run: ls
 #     - name: Running test suite
 #       run: python runner.py
+#     - name: Setting Account Config
+    
+      
+    
       
 
 #   deploy:
