--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,42 +14,42 @@ jobs:
     - uses: actions/checkout@v1
     - name: Check for script working
       run: echo Hello, world!
-    - name: check for enve
+    - name: Installing google sdk
+      run: |
+        echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] https://packages.cloud.google.com/apt cloud-sdk main" | sudo tee -a /etc/apt/sources.list.d/google-cloud-sdk.list
+        sudo apt-get install apt-transport-https ca-certificates -y
+        curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key --keyring /usr/share/keyrings/cloud.google.gpg add -
+        sudo apt-get update && sudo apt-get install -y google-cloud-sdk google-cloud-sdk-app-engine-python google-cloud-sdk-app-engine-python-extras
+    - name: Fixing path of google sdk in evironment variable
+      run: |
+        export gcloud_path=/usr/lib/google-cloud-sdk/
+        echo $gcloud_path
+    - name: Installing python and pip
+      run: |
+        sudo apt-get update -y
+        sudo apt-get -y install python2.7 python-pip
+    - name: Installing dependcy for project
+      run: pip install -r requirements.txt
+    - name: Adding upgrade
+      run: |
+        sudo pip install --upgrade pip
+        sudo pip install --upgrade setuptools
+    - name: Installing dependcy in library to
+      run: pip install -t lib/ -r requirements.txt
+    - name: check dir
+      run: ls
+    - name: Running test suite
+      run: python runner.py
+    - name: Setting Account Config
       env:
           PROJECT_ID: ${{secrets.GCLOUD_PROJECT_ID}}
           APPLICATION_CREDENTIALS: ${{secrets.GOOGLE_APPLICATION_CREDENTIALS}}
       run: |
-        echo "$APPLICATION_CREDENTIALS" | base64 -d > client.json
-        ls
-#     - name: Installing google sdk
-#       run: |
-#         echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] https://packages.cloud.google.com/apt cloud-sdk main" | sudo tee -a /etc/apt/sources.list.d/google-cloud-sdk.list
-#         sudo apt-get install apt-transport-https ca-certificates -y
-#         curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key --keyring /usr/share/keyrings/cloud.google.gpg add -
-#         sudo apt-get update && sudo apt-get install -y google-cloud-sdk google-cloud-sdk-app-engine-python google-cloud-sdk-app-engine-python-extras
-#     - name: Fixing path of google sdk in evironment variable
-#       run: |
-#         export gcloud_path=/usr/lib/google-cloud-sdk/
-#         echo $gcloud_path
-#     - name: Installing python and pip
-#       run: |
-#         sudo apt-get update -y
-#         sudo apt-get -y install python2.7 python-pip
-#     - name: Installing dependcy for project
-#       run: pip install -r requirements.txt
-#     - name: Adding upgrade
-#       run: |
-#         sudo pip install --upgrade pip
-#         sudo pip install --upgrade setuptools
-#     - name: Installing dependcy in library to
-#       run: pip install -t lib/ -r requirements.txt
-#     - name: check dir
-#       run: ls
-#     - name: Running test suite
-#       run: python runner.py
-#     - name: Setting Account Config
-    
-      
+        echo "$APPLICATION_CREDENTIALS" | base64 -d > account.json
+        gcloud auth activate-service-account --key-file=account.json
+        gcloud config set project "$PROJECT_ID"    
+    - name: Deploy application
+      run: gcloud app deploy app.yaml --quiet
     
       
 
