--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,14 +14,14 @@ jobs:
     - uses: actions/checkout@v1
     - name: Check for script working
       run: echo Hello, world!
-    - name: GCP Authenticate
-      uses: actions/gcloud/auth@master
-      env:
-        GCLOUD_AUTH: ${{ secrets.GCLOUD_AUTH }}
-    - name: Check gcloud version
-      uses: actions/gcloud/cli@master
-      with:
-        args: version
+   # - name: GCP Authenticate
+   #   uses: actions/gcloud/auth@master
+   #   env:
+   #    GCLOUD_AUTH: ${{ secrets.GCLOUD_AUTH }}
+   # - name: Check gcloud version
+   #   uses: actions/gcloud/cli@master
+   #   with:
+   #     args: version
     # - name: Installing google sdk
     #   run: |
     #     echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] https://packages.cloud.google.com/apt cloud-sdk main" | sudo tee -a /etc/apt/sources.list.d/google-cloud-sdk.list
